--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.14",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
-    "react-spring": "^9.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
